tests/warnings/ipsubnets.stderr
warning: This range will yeild no values: IP1 >= IP2
 --> tests/warnings/ipsubnets.rs:4:24
  |
4 |     let _ = ipsubnets!("2001:db8::32:ffff", "2001:db8::32:23", 64);
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: This iterator requires the lower IP value first in it's arguments list.

warning: This range will yeild no values: IP1 >= IP2
 --> tests/warnings/ipsubnets.rs:5:24
  |
5 |     let _ = ipsubnets!("10.128.0.0", "10.0.0.0", 24);
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: This iterator requires the lower IP value first in it's arguments list.

error: invalid IP address syntax
 --> tests/warnings/ipsubnets.rs:8:24
  |
8 |     let _ = ipsubnets!("10128.0.0", "10.0.0.0", 24);
  |                        ^^^^^^^^^^^
